Bug 441588 - Windows - Blank Auto-Key feature exhibits artifacts in certain circumstances.
Summary: Windows - Blank Auto-Key feature exhibits artifacts in certain circumstances.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: 5.0.0-beta1
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Eoin O'Neill
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-08-26 20:37 UTC by Eoin O'Neill
Modified: 2021-10-26 20:39 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eoin O'Neill 2021-08-26 20:37:14 UTC
SUMMARY
Auto key feature is useful, and the duplicate mode works as expected. However, uniquely to Windows, the blank auto key mode causes some rendering artifacts where the canvas doesn't update appropriately. I'm not sure what the cause of this is, but it would be nice to get it working for release.

STEPS TO REPRODUCE
1. Draw a big box on frame 1. The bigger, the better here.
2. Go to frame 10. Enabled Auto-Key and make sure it is on "blank" mode.
3. Draw a smaller box. Smaller is preferable here, and make sure it overlaps with some part of the line to properly see what's really happening.
4. Observe how the small box and the big box are both visible. You can see tile artifacts from the smaller box overlapping the big one, which indicates that the data and the visual are out of alignment. 
5. Hide the layer and reshow to see what the canvas should actually look like.


EXPECTED RESULT
Blank key auto-key setting should have no artifacts, just like on Linux.

SOFTWARE/OS VERSIONS
Windows: 10
Comment 1 Eoin O'Neill 2021-10-21 23:06:24 UTC
Git commit b58801a7ae9514c0ae7491b85eb7c827ed93023f by Eoin O'Neill.
Committed on 21/10/2021 at 23:03.
Pushed by eoinoneill into branch 'master'.

Windows Blank Autokey Artifacts Fix

Fix a bug where autokey mode blank would cause
some artifacts when instant preview mode was enabled.
Made a note that finding root cause of difference
between linux and windows would be a good idea in the
future to prevent unnecessary cleanup in transaction!

M  +9    -0    libs/image/kis_transaction_data.cpp

https://invent.kde.org/graphics/krita/commit/b58801a7ae9514c0ae7491b85eb7c827ed93023f
Comment 2 Eoin O'Neill 2021-10-26 20:39:24 UTC
Git commit b450441b16cc84f1a73c879113ef0dcb5938d307 by Eoin O'Neill.
Committed on 26/10/2021 at 20:38.
Pushed by eoinoneill into branch 'krita/5.0'.

Windows Blank Autokey Artifacts Fix

Fix a bug where autokey mode blank would cause
some artifacts when instant preview mode was enabled.
Made a note that finding root cause of difference
between linux and windows would be a good idea in the
future to prevent unnecessary cleanup in transaction!
(cherry picked from commit b58801a7ae9514c0ae7491b85eb7c827ed93023f)

M  +9    -0    libs/image/kis_transaction_data.cpp

https://invent.kde.org/graphics/krita/commit/b450441b16cc84f1a73c879113ef0dcb5938d307