Windows Blank Autokey Artifacts Fix

Fix a bug where autokey mode blank would cause
some artifacts when instant preview mode was enabled.
Made a note that finding root cause of difference
between linux and windows would be a good idea in the
future to prevent unnecessary cleanup in transaction!

BUG:441588